tests/duarouter/function/skip_routing/invalid/gaps_repair/errors.duarouter
Warning: Repaired route of vehicle 'left_gap'.
Warning: Repaired route of vehicle 'middle_gap'.
